# ChangeLog file for sql/src/backends/monet5
# This file is updated with mchangelog (Gentoo echangelog bastard script)

  01 Jul 2009; Fabian Groffen <fabian@cwi.nl> monetdb.1, monetdb.c:
  Allow an expression to be used to match against the list of discovered
  databases for future convenience.

  19 Jun 2009; Fabian Groffen <fabian@cwi.nl> monetdb.c:
  Allow setting the name of a database (a.k.a. renaming it), doing all the
  logic to keep the logdir aligned in case it's absolute.

  19 Jun 2009; Fabian Groffen <fabian@cwi.nl> merovingian.c,
  merovingian.1:
  Increase the default mero_exittimeout from 7 to 60 seconds.

  19 Jun 2009; Fabian Groffen <fabian@cwi.nl> monetdb.1, monetdb.c:
  Restrict database names created by monetdb to the pattern [A-Za-z0-9-_]+.

  17 Jun 2009; Fabian Groffen <fabian@cwi.nl> merovingian.1,
  merovingian.c, monetdb.1, monetdb.c, +utils.c, +utils.h,
  +properties.c, +properties.h:
  Implemented full per-database property support.  monetdb now can
  manage the following per-database properties: logdir, forward, shared,
  nthreads.  Feature Request #1837591.

  16 Jun 2009; Fabian Groffen <fabian@cwi.nl> monetdb.c:
  Fixed bug where destroying multiple databases without -f would abort after
  the first database.

  08 Jun 2009; Fabian Groffen <fabian@cwi.nl> monetdb.c:
  Avoid multiple questions by merging them into a single confirmation for the
  destroy command.  This accidently fixes a bug where a response such as 'yes'
  would abort the next database removal.

  04 Jun 2009; Fabian Groffen <fabian@cwi.nl> merovingian.1, merovingian.c:
  Implemented a configurable port for the neighbour discovery service. This
  also allows to entirely disable neighbour discovery by setting
  mero_discoveryport to 0.  Feature request #2800964

  02 Jun 2009; Fabian Groffen <fabian@cwi.nl> monetdb.c:
  Implemented dynamic width of monetdb status output. If a database name is
  wider than 14 chars, the name column is made wider as long as the